// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#100: GET operation generates client method with GET request 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = string[];"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#100: GET operation generates client method with GET request 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<GetItemsResponse>, never>(
      async (): Promise<GetItemsResponse> => {
        try {
          const result = await requester<GetItemsResponse>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#100-#107: all 8 HTTP methods on one path generate 8 distinct methods 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetResourceResponse = void;

export type PostResourceResponse = void;

export type PutResourceResponse = void;

export type PatchResourceResponse = void;

export type DeleteResourceResponse = void;

export type OptionsResourceResponse = void;

export type HeadResourceResponse = void;

export type TraceResourceResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#100-#107: all 8 HTTP methods on one path generate 8 distinct methods 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    postResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    putResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("PUT", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    patchResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("PATCH", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    deleteResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("DELETE", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    optionsResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("OPTIONS", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    headResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("HEAD", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    traceResource: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("TRACE", \`/resource\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#101: POST operation generates client method with body parameter 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; };

export type PostItemsResponse = { id: string; };"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#101: POST operation generates client method with body parameter 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#102: PUT operation generates client method with body and path params 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PutItemsIdBody = { name?: string; };

export type PutItemsIdResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#102: PUT operation generates client method with body and path params 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PutItemsIdBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    putItemsById: decorateWithErrors<(id: string, body: PutItemsIdBody) => Promise<void>, never>(
      async (id: string, body: PutItemsIdBody): Promise<void> => {
        try {
          const result = await requester<void>("PUT", \`/items/\${encodeURIComponent(id)}\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#103: PATCH operation generates client method 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PatchItemsIdBody = { name?: string; };

export type PatchItemsIdResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#103: PATCH operation generates client method 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PatchItemsIdBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    patchItemsById: decorateWithErrors<(id: string, body: PatchItemsIdBody) => Promise<void>, never>(
      async (id: string, body: PatchItemsIdBody): Promise<void> => {
        try {
          const result = await requester<void>("PATCH", \`/items/\${encodeURIComponent(id)}\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#104: DELETE operation generates client method 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type DeleteItemsIdResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#104: DELETE operation generates client method 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    deleteItemsById: decorateWithErrors<(id: string) => Promise<void>, never>(
      async (id: string): Promise<void> => {
        try {
          const result = await requester<void>("DELETE", \`/items/\${encodeURIComponent(id)}\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#105: OPTIONS operation generates client method 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OptionsItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#105: OPTIONS operation generates client method 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    optionsItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("OPTIONS", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#106: HEAD operation generates client method 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type HeadItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#106: HEAD operation generates client method 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    headItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("HEAD", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#107: TRACE operation generates client method 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type TraceItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — HTTP Methods (3.0-#100-#107) > 3.0-#107: TRACE operation generates client method 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    traceItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("TRACE", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#108: operationId strategy uses operationId as method name 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#108: operationId strategy uses operationId as method name 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    listAllItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#108: operationId with path-based strategy is ignored 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#108: operationId with path-based strategy is ignored 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#108: operationId-with-fallback uses operationId when present 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;

export type GetThingsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#108: operationId-with-fallback uses operationId when present 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    listItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    ),
    getThings: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/things\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#109: operation summary becomes JSDoc description 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#109: operation summary becomes JSDoc description 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Retrieve all items from the catalog
     */
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#109-#112: combined JSDoc with all metadata fields 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetLegacyItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#109-#112: combined JSDoc with all metadata fields 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Legacy items endpoint
     *
     * Use the new /items endpoint instead
     *
     * @category legacy
     * @category deprecated
     *
     * @deprecated
     */
    getLegacyItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/legacy/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#110: description without summary still generates JSDoc 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#110: description without summary still generates JSDoc 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Fetches the complete catalog
     */
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#110: operation description appears in JSDoc after summary 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#110: operation description appears in JSDoc after summary 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Get items
     *
     * Returns a paginated list of all available items
     */
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#111: operation tags become @category JSDoc annotations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#111: operation tags become @category JSDoc annotations 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Get items
     *
     * @category catalog
     * @category public
     */
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#112: deprecated operation adds @deprecated JSDoc tag 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetLegacyItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#112: deprecated operation adds @deprecated JSDoc tag 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Old endpoint
     *
     * @deprecated
     */
    getLegacyItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/legacy/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#113: path templating generates correct path params and URL encoding 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetUsersUserIdPostsPostIdResponse = { title?: string; };"
`;

exports[`OpenAPI 3.0 — Operation Metadata (3.0-#108-#113) > 3.0-#113: path templating generates correct path params and URL encoding 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetUsersUserIdPostsPostIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getUsersByUserIdPostsByPostId: decorateWithErrors<(userId: string, postId: string) => Promise<GetUsersUserIdPostsPostIdResponse>, never>(
      async (userId: string, postId: string): Promise<GetUsersUserIdPostsPostIdResponse> => {
        try {
          const result = await requester<GetUsersUserIdPostsPostIdResponse>("GET", \`/users/\${encodeURIComponent(userId)}/posts/\${encodeURIComponent(postId)}\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83: generates type definition for apiKey security scheme in query 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** API key passed as query parameter */

export type ApiKeyQueryAuth = { type: "apiKey"; description: "API key passed as query parameter"; name: "api_key"; in: "query" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83: generates type definition for apiKey security scheme in query 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83-#94: OAuth2 flow with refreshUrl includes it in type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OAuthWithRefreshAuth = { type: "oauth2"; flows: { authorizationCode: { authorizationUrl: "https://example.com/auth"; tokenUrl: "https://example.com/token"; refreshUrl: "https://example.com/refresh"; scopes: { "read": "Read access" } } } };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83-#94: OAuth2 flow with refreshUrl includes it in type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83-#94: multiple security schemes generate SecuritySchemes union type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ApiKeyHeaderAuth = { type: "apiKey"; name: "X-API-Key"; in: "header" };

export type BearerAuthAuth = { type: "http"; scheme: "bearer" };

export type SecuritySchemes = ApiKeyHeaderAuth | BearerAuthAuth;

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83-#94: multiple security schemes generate SecuritySchemes union type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83-#94: single security scheme does not generate SecuritySchemes union 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OnlyAuthAuth = { type: "http"; scheme: "basic" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#83-#94: single security scheme does not generate SecuritySchemes union 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#84: generates type definition for apiKey security scheme in header 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ApiKeyHeaderAuth = { type: "apiKey"; name: "X-API-Key"; in: "header" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#84: generates type definition for apiKey security scheme in header 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#85: generates type definition for apiKey security scheme in cookie 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type SessionCookieAuth = { type: "apiKey"; name: "session"; in: "cookie" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#85: generates type definition for apiKey security scheme in cookie 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#86: generates type definition for HTTP basic security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BasicAuthAuth = { type: "http"; scheme: "basic" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#86: generates type definition for HTTP basic security scheme 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#87: generates type definition for HTTP bearer security scheme with bearerFormat 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BearerAuthAuth = { type: "http"; scheme: "bearer"; bearerFormat: "JWT" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#87: generates type definition for HTTP bearer security scheme with bearerFormat 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#88: generates type definition for HTTP digest security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type DigestAuthAuth = { type: "http"; scheme: "digest" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#88: generates type definition for HTTP digest security scheme 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#89: generates type definition for OAuth2 implicit flow 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OAuth2ImplicitAuth = { type: "oauth2"; flows: { implicit: { authorizationUrl: "https://example.com/auth"; scopes: { "read:items": "Read items"; "write:items": "Write items" } } } };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#89: generates type definition for OAuth2 implicit flow 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#89-#92: OAuth2 with multiple flows generates all flow types 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FullOAuthAuth = { type: "oauth2"; flows: { implicit: { authorizationUrl: "https://example.com/auth"; scopes: { "read": "Read access" } }; password: { tokenUrl: "https://example.com/token"; scopes: { "read": "Read access" } }; clientCredentials: { tokenUrl: "https://example.com/token"; scopes: { "read": "Read access" } }; authorizationCode: { authorizationUrl: "https://example.com/auth"; tokenUrl: "https://example.com/token"; scopes: { "read": "Read access" } } } };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#89-#92: OAuth2 with multiple flows generates all flow types 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#90: generates type definition for OAuth2 password flow 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OAuth2PasswordAuth = { type: "oauth2"; flows: { password: { tokenUrl: "https://example.com/token"; scopes: { "read:items": "Read items" } } } };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#90: generates type definition for OAuth2 password flow 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#91: generates type definition for OAuth2 client credentials flow 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OAuth2ClientAuth = { type: "oauth2"; flows: { clientCredentials: { tokenUrl: "https://example.com/token"; scopes: { "read:items": "Read items" } } } };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#91: generates type definition for OAuth2 client credentials flow 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#92: generates type definition for OAuth2 authorization code flow 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OAuth2AuthCodeAuth = { type: "oauth2"; flows: { authorizationCode: { authorizationUrl: "https://example.com/auth"; tokenUrl: "https://example.com/token"; scopes: { "read:items": "Read items" } } } };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#92: generates type definition for OAuth2 authorization code flow 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#93: generates type definition for openIdConnect security scheme 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type OidcAuthAuth = { type: "openIdConnect"; openIdConnectUrl: "https://example.com/.well-known/openid-configuration" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#93: generates type definition for openIdConnect security scheme 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#94: security requirements do not crash generation 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BearerAuthAuth = { type: "http"; scheme: "bearer" };

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Security Schemes (3.0-#83-#94) > 3.0-#94: security requirements do not crash generation 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#95: server without variables does not generate a server params type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#95: server without variables does not generate a server params type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#95-#99: server variable without description still generates correctly 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{host}.example.com */
export interface ServerParams {
  /** @default api */
  host: string;
}

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#95-#99: server variable without description still generates correctly 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#96: server with variables generates ServerParams interface 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{env}.api.example.com */
export interface ServerParams {
  /** Server environment @default production */
  env: string;
}

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#96: server with variables generates ServerParams interface 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#97: server variables with enum generate union type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{env}.api.example.com */
export interface ServerParams {
  /** @default production */
  env: "production" | "staging" | "development";
}

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#97: server variables with enum generate union type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#98: server variable default value appears in JSDoc 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{version}.api.example.com */
export interface ServerParams {
  /** API version @default v2 */
  version: string;
}

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#98: server variable default value appears in JSDoc 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#99: multiple servers with variables generate indexed ServerParams 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{env}.api.example.com */
export interface Server1Params {
  /** @default production */
  env: "production" | "staging";
}

/** Server: https://cdn.example.com/{region} */
export interface Server2Params {
  /** @default us */
  region: "us" | "eu" | "ap";
}

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#99: multiple servers with variables generate indexed ServerParams 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#99: servers with and without variables mixed correctly 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Server: https://{env}.api.example.com */
export interface Server2Params {
  /** @default production */
  env: string;
}

export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Servers (3.0-#95-#99) > 3.0-#99: servers with and without variables mixed correctly 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;
